--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 2.8)
 project(sik_czat)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-add_library(err err.cpp)
+add_library(common common.cpp)
 
 add_executable(server server.cpp)
 add_executable(client client.cpp)
 
-target_link_libraries(server err)
+target_link_libraries(server common)
+target_link_libraries(client common)
